--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
+    "nodemailer": "^6.9.7",
     "payload": "^2.2.1",
     "react": "^18",
     "react-dom": "^18",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
