--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "sonner": "^1.2.4",
+    "stripe": "^14.19.0",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
